@@ -22,6 +22,8 @@ x2goclient (4.0.5.1-0x2go1) UNRELEASED; urgency=low
       strings are inserted in there, for instance by the perl interpreter
       itself. We need to skip over these, or the client crashes when splitting
       up the invalid lines.
+    - macbuild.sh: add stdlib forcing. Should not be used unless you really
+      know what you're doing. If you ponder using this, you probably don't.
   * debian/control:
     - Change apache2-dev | libc6-dev build dependency back to apache2-dev
       only. Otherwise, apache2-dev is not installed at all, even though
